- Added link for Google Scholar profile. - Updated skills.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p>
               <a href="Burak-Bastem-Resume.pdf" target="_blank" title="Resume in PDF"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               <a href="https://www.linkedin.com/in/burakbastem/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large custom-text-color"></i></a>
+              <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons8-google-scholar.svg" class="w3-margin-right" style="width:22px"></img></a>
               <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
             </p>
           </div>
@@ -84,6 +85,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <br>
           </div>
         </div>
+        <!-- End of Bio -->
         <!-- Experience -->
         <a id="experience"></a>
         <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
@@ -333,9 +335,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-tag custom-color">Objective-C</h5>
             <h5 class="w3-tag custom-color">SQL</h5>
             <h5 class="w3-tag custom-color">HTML</h5>
+            <h5 class="w3-tag custom-color">CSS</h5>
             <h5 class="w3-tag custom-color">PHP</h5>
             <h5 class="w3-tag custom-color">MATLAB</h5>
-            <h5 class="w3-tag custom-color">scikit-learn</h5>
+            <h5 class="w3-tag custom-color">Scikit-Learn</h5>
             <h5 class="w3-tag custom-color">Pandas</h5>
             <h5 class="w3-tag custom-color">Redis</h5>
             <h5 class="w3-tag custom-color">Keras</h5>
@@ -365,6 +368,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <b>CSS Framework: </b> Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
     <b>Font: </b> &copy; 2011 Google Inc.
     <b>Icons: </b> Font Awesome by Dave Gandy - <a href="http://fontawesome.io" target="_blank">http://fontawesome.io</a>
+    and
+    <a target="_blank" href="https://icons8.com/icons/set/google-scholar--v2">Google Scholar icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
   </footer>
 
   <script>
