--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               <h5 class="w3-show-inline-block"><b>Speaker, HPCAsia 2020</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Jan 2020</h5>
               <ul style="list-style-type: square">
-                <li>Presented the <a href="#experience">HPCAsia paper</a>.</li>
+                <li>Presented the <a href="#publications">HPCAsia paper</a>.</li>
                 <li>Received Certificate of Attendence.</li>
               </ul>
               <hr>
