- Added comma into a sentence in bio :P

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-user fa-fw w3-margin-right"></i>Bio</h2>
             <div class="w3-container">
-              Burak Bastem is a software engineer specialized in high performance computing (HPC) and machine learning (ML). His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications. Since 2018 he has been working on fraud detection, a challenging ML problem due to its highly unbalanced nature.
+              Burak Bastem is a software engineer specialized in high performance computing (HPC) and machine learning (ML). His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications. Since 2018, he has been working on fraud detection, a challenging ML problem due to its highly unbalanced nature.
               <br>
               <br>
             </div>
