--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS Framework: Powered by w3.css - https://www.w3schools.com/w3css/default.asp -->
-    <link rel="stylesheet" href="customized-w3.css">
+    <link rel="stylesheet" href="css/customized-w3.css">
     <!-- Font: Copyright 2011 Google Inc. All Rights Reserved. - https://fonts.google.com/specimen/Roboto -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <!-- Icons: Font Awesome by Dave Gandy - http://fontawesome.io -->
@@ -26,19 +26,19 @@
         <div class="w3-third w3-center custom-position-2 w3-margin-bottom">
           <div class="w3-white w3-text-dark-grey w3-card-4">
             <div class="">
-              <img src="burak-bastem-photo.jpg" class="custom-image w3-circle w3-margin-top" alt="Burak Bastem">
+              <img src="photos/burak-bastem-photo.jpg" class="custom-image w3-circle w3-margin-top" alt="Burak Bastem">
               <h1><b>Burak Bastem</b></h1>
             </div>
-            <div class="w3-container w3-left-align w3-show-inline-block">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large custom-text-color"></i>Expert R&D Engineer<br><i class="fa fa-fw w3-margin-right"></i>at <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">Yapı Kredi Teknoloji</a></p>
-              <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right custom-text-color"></i>burakbastem@hotmail.com</a></p>
-              <p></p>
+            <div class="w3-container w3-show-inline-block">
+              <p class="w3-left-align"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large custom-text-color"></i>Senior R&D Engineer<br><i class="fa fa-fw w3-margin-right"></i>at <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">Yapı Kredi Teknoloji</a></p>
+              <p class="w3-left-align"><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right custom-text-color"></i>burakbastem@hotmail.com</a></p>
               <p>
-                <a href="Burak-Bastem-Resume.pdf" target="_blank" title="Resume in PDF"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large custom-text-color"></i></a>
+                <a href="misc/Burak-Bastem-Resume.pdf" target="_blank" title="Resume in PDF"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://www.linkedin.com/in/burakbastem/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large custom-text-color"></i></a>
-                <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
+                <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons/icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
+              <p class="w3-small w3-text-grey">Last updated: August 25, 2020</p>
             </div>
           </div>
         </div>
@@ -83,11 +83,21 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</h2>
             <div class="w3-container">
-              <h5 class="w3-show-inline-block"><b>Expert R&D Engineer</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July 2018 - present</h5>
+              <h5 class="w3-show-inline-block"><b>Senior R&D Engineer</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2020 - present</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
-                <li>Developing state-of-the-art machine learning models for credit card and cross-channel fraud detection which are challenging problems due to highly unbalanced data and real-time requirement.</li>
+                <li>Working on cross-channel fraud detection with machine learning on big data store.</li>
+              </ul>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-show-inline-block"><b>Expert R&D Engineer</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July 2018 - August 2020</h5>
+              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji</b>, İstanbul, Turkey</h6>
+              <ul style="list-style-type: square">
+                <li>Developed machine learning models for credit card fraud detection which involves providing solutions for extremely unbalanced class ratio and concept drift.</li>
+                <li>Achieved better performance than proprietary model.</li>
               </ul>
               <hr>
             </div>
@@ -98,7 +108,7 @@
               <ul style="list-style-type: square">
                 <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16</li>
                 <li>Designed and developed TiDA-acc. TiDA-acc is a tiling-based GPU programming model which manages distinct address spaces, successfully hides transfer latency between CPU and GPU, automatically generates GPU code, handles cases where there is no sufficient GPU memory and is published at ICPP’17.</li>
-                <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article and a poster about the study at BAŞARIM’17, Turkey’s national HPC conference</li>
+                <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article and a poster about the study at BAŞARIM’17, Turkey’s national HPC conference.</li>
                 <li>Developed a tiling-based high-level asynchronous programming model for GPU clusters using TiDA-acc. On top of what TiDA-acc offers, it utilizes all GPUs (and CPUs) in the system, overlaps any type of communication with computation and achieves good speedup. The study is published at HPCAsia’20.</li>
               </ul>
               <hr>
@@ -126,7 +136,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Aug 2015</h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2015</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Vestel R&D</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
                 <li>Developed proof of concept applications for Android platform.</li>
@@ -135,7 +145,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>June - Aug 2014</h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>June - August 2014</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Netaş</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
                 <li>Analyzed and configured static code analysis tools to be integrated to continuous delivery project.</li>
@@ -153,7 +163,7 @@
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - Apr 2019</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
               <p>
-                <a href="thesis-defense-with-my-advisor-didem-unat.jpeg" target="_blank">Thesis:</a> Tiling-Based Programming Model for GPU Clusters Targeting Structured Grids
+                Thesis: Tiling-Based Programming Model for GPU Clusters Targeting Structured Grids
                 <br>
                 GPA: 3.88 / 4.00
               </p>
@@ -194,6 +204,10 @@
             <h2 style="padding-top:16px" class="custom-text-color"><i class="fa fa-file fa-fw w3-margin-right"></i>Publications</h2>
             <h4 style="padding-bottom:16px">Conference Proceedings</h4>
             <div class="w3-container">
+              <h5>Barış Bayram, Burak Bastem, Mehmet Gönen, <b>“AUC Maximizing Gradient Boosting Trees for Fraud Detection”</b>, in Submission</h5>
+                <hr>
+              </div>
+            <div class="w3-container">
               <h5>Burak Bastem, Didem Unat, <b><a href="https://dl.acm.org/doi/10.1145/3368474.3368485" target="_blank">“Tiling-Based Programming Model for Structured Grids on GPU Clusters”</a></b>, International Conference on High Performance Computing in Asia-Pacific Region (HPCAsia), Fukuoka, Japan, January 2020</h5>
                 <hr>
               </div>
@@ -214,19 +228,19 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Honors and Awards</h2>
             <div class="w3-container">
-              <h5 class="w3-show-inline-block"><b>Research Project Scholarship Recipient</b></h5>
+              <h5 class="w3-show-inline-block"><b>Research Project Scholarship</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - July 2018</h5>
               <h6>Prof. Didem Unat via TÜBİTAK</h6>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-show-inline-block"><b>Half Merit Scholarship Recipient</b></h5>
+              <h5 class="w3-show-inline-block"><b>Half Merit Scholarship</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>2010 - 2016</h5>
               <h6>Koç University, Istanbul, Turkey</h6>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-show-inline-block"><b>Second Best Senior Project Award</b></h5>
+              <h5 class="w3-show-inline-block"><b>Second Best Senior Project</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>2016</h5>
               <h6>Koç University, Istanbul, Turkey</h6>
               <hr>
@@ -270,7 +284,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Speaker, ICPP 2017</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Aug 2017</h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2017</h5>
               <ul style="list-style-type: square">
                 <li>Presented <a href="#publications">the ICPP paper</a>.</li>
                 <li>Received Certificate of Attendence.</li>
@@ -334,6 +348,8 @@
               <h5 class="w3-tag custom-color">Pandas</h5>
               <h5 class="w3-tag custom-color">Redis</h5>
               <h5 class="w3-tag custom-color">Keras</h5>
+              <h5 class="w3-tag custom-color">Hive</h5>
+              <h5 class="w3-tag custom-color">Spark</h5>
               <h5 class="w3-tag custom-color">CUDA</h5>
               <h5 class="w3-tag custom-color">OpenACC</h5>
               <h5 class="w3-tag custom-color">MPI</h5>
