- Updated job descriptions. - Added new activities. - Added new computer skills and rearranged all. - Updated PDF version. - Updated copyright text.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons/icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: August 26, 2020</p>
+              <p class="w3-small w3-text-grey">Last updated: August 10, 2021</p>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-user fa-fw w3-margin-right"></i>Bio</h2>
             <div class="w3-container">
-              Burak Bastem is a software engineer specialized in high performance computing (HPC) and machine learning (ML). His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications. Since 2018, he has been working on fraud detection, a challenging ML problem due to its highly unbalanced nature.
+              Burak Bastem is a software engineer specialized in high performance computing (HPC) and machine learning (ML). His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications. Since 2018, he has been working on fraud detection with ML, a challenging problem due to its highly unbalanced nature.
               <br>
               <br>
             </div>
@@ -85,19 +85,23 @@
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Senior R&D Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2020 - present</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji</b>, İstanbul, Turkey</h6>
+              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji - Applied Data Science Team</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
-                <li>Working on cross-channel fraud detection with machine learning on big data store.</li>
+                <li>Working on fraud focused machine learning projects: cross-channel fraud detection and employee fraud detection. Due to difficulty of the problem, projects are mainly research-focused and enriched with academic collaborations from respectable universities. The projects also involve HPC and big data solutions because of their data size.</li>
+                <li>While studying, applying and developing state-of-the-art machine learning solutions in the research phase, implementing and integrating backend solutions in the release phase.</li>
+                <li>Developed a proof-of-concept computer vision project about tracking social distance in bank branches from camera footage.</li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Expert R&D Engineer</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>July 2018 - August 2020</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji</b>, İstanbul, Turkey</h6>
+              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji - Applied Data Science Team</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
                 <li>Developed machine learning models for credit card fraud detection which involves providing solutions for extremely unbalanced class ratio and concept drift.</li>
                 <li>Achieved better performance than proprietary model.</li>
+                <li>Developed and integrated a pipeline to train and deploy models automatically and score credit card transactions in real-time (<10 ms).</li>
+                <li>Represented the company and fulfilled the responsibilities as a data provider in European Data Incubator (EDI), an EU H2020 project.</li>
               </ul>
               <hr>
             </div>
@@ -106,7 +110,7 @@
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>June 2015 - April 2019</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University Parcorelab</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
-                <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16</li>
+                <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16.</li>
                 <li>Designed and developed TiDA-acc. TiDA-acc is a tiling-based GPU programming model which manages distinct address spaces, successfully hides transfer latency between CPU and GPU, automatically generates GPU code, handles cases where there is no sufficient GPU memory and is published at ICPP’17.</li>
                 <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article and a poster about the study at BAŞARIM’17, Turkey’s national HPC conference.</li>
                 <li>Developed a tiling-based high-level asynchronous programming model for GPU clusters using TiDA-acc. On top of what TiDA-acc offers, it utilizes all GPUs (and CPUs) in the system, overlaps any type of communication with computation and achieves good speedup. The study is published at HPCAsia’20.</li>
@@ -139,7 +143,7 @@
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2015</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Vestel R&D</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
-                <li>Developed proof of concept applications for Android platform.</li>
+                <li>Developed proof-of-concept applications for Android platform.</li>
               </ul>
               <hr>
             </div>
@@ -259,6 +263,23 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-certificate fa-fw w3-margin-right"></i>Activities</h2>
             <div class="w3-container">
+              <h5 class="w3-show-inline-block"><b>Speaker, TRAI Meet-Up #45</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>May 2021</h5>
+              <ul style="list-style-type: square">
+                <li>Talked about <a href="#experience">fraud projects</a>.</li>
+              </ul>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-show-inline-block"><b>Speaker, EuroCC@Turkey HPC Winter School</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2021</h5>
+              <ul style="list-style-type: square">
+                <li>Talked about HPC side of <a href="#experience">fraud projects</a>.</li>
+              </ul>
+              <hr>
+            </div>
+
+            <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Speaker, HPCAsia 2020</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Jan 2020</h5>
               <ul style="list-style-type: square">
@@ -328,33 +349,48 @@
               </ul>
               <hr>
             </div>
-            <div class="w3-container w3-margin-bottom w3-center">
+            <div class="w3-container w3-center">
+              <p class="w3-margin  w3-show-inline-block">Primary</p>
+              <br>
               <h5 class="w3-tag custom-color">Python</h5>
               <h5 class="w3-tag custom-color">C++</h5>
-            <h5 class="w3-tag custom-color">C</h5>
               <h5 class="w3-tag custom-color">Java</h5>
-              <h5 class="w3-tag custom-color">Julia</h5>
-              <h5 class="w3-tag custom-color">Objective-C</h5>
               <h5 class="w3-tag custom-color">SQL</h5>
-              <h5 class="w3-tag custom-color">HTML</h5>
-              <h5 class="w3-tag custom-color">CSS</h5>
-              <h5 class="w3-tag custom-color">PHP</h5>
-              <h5 class="w3-tag custom-color">MATLAB</h5>
-              <h5 class="w3-tag custom-color">Scikit-Learn</h5>
-              <h5 class="w3-tag custom-color">Pandas</h5>
+              <br>
+              <h5 class="w3-tag custom-color">Docker</h5>
+              <h5 class="w3-tag custom-color">MongoDB</h5>
               <h5 class="w3-tag custom-color">Redis</h5>
-              <h5 class="w3-tag custom-color">Keras</h5>
               <h5 class="w3-tag custom-color">Hive</h5>
               <h5 class="w3-tag custom-color">Spark</h5>
+              <h5 class="w3-tag custom-color">Pandas</h5>
+              <h5 class="w3-tag custom-color">Keras</h5>
+              <br>
               <h5 class="w3-tag custom-color">CUDA</h5>
               <h5 class="w3-tag custom-color">OpenACC</h5>
               <h5 class="w3-tag custom-color">MPI</h5>
               <h5 class="w3-tag custom-color">OpenMP</h5>
               <h5 class="w3-tag custom-color">Pthreads</h5>
-              <h5 class="w3-tag custom-color">Knet</h5>
+              <br>
+              <h5 class="w3-tag custom-color">Linux</h5>
+              <br>
+            </div>
+            <hr>
+            <div class="w3-container w3-margin-bottom w3-center">
+              <p class="w3-margin  w3-show-inline-block">Secondary</p>
+              <br>
+              <h5 class="w3-tag custom-color">HTML</h5>
+              <h5 class="w3-tag custom-color">CSS</h5>
+              <h5 class="w3-tag custom-color">PHP</h5>
+              <h5 class="w3-tag custom-color">Julia</h5>
+              <h5 class="w3-tag custom-color">C</h5>
+              <h5 class="w3-tag custom-color">Objective-C</h5>
+              <h5 class="w3-tag custom-color">MATLAB</h5>
+              <br>
               <h5 class="w3-tag custom-color">OpenCV</h5>
               <h5 class="w3-tag custom-color">OpenGL</h5>
-              <h5 class="w3-tag custom-color">Linux</h5>
+              <h5 class="w3-tag custom-color">WordPress</h5>
+              <h5 class="w3-tag custom-color">WooCommerce</h5>
+              <br>
               <h5 class="w3-tag custom-color">iOS</h5>
               <h5 class="w3-tag custom-color">Android</h5>
               <br>
@@ -367,7 +403,7 @@
     </div>
     <!-- End Page Container -->
     <footer class="w3-container w3-margin w3-center w3-small w3-text-grey">
-      <b>&copy; 2017 - 2020 Burak Bastem</b>
+      <b>&copy; 2017 - 2021 Burak Bastem</b>
       <br>
       <b>CSS Framework: </b> Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
       <b>Font: </b> &copy; 2011 Google Inc.
