- Fixed text size in PDF.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <li>Developed machine learning models for credit card fraud detection which involves providing solutions for extremely unbalanced class ratio and concept drift.</li>
                 <li>Achieved better performance than proprietary model.</li>
                 <li>Developed and integrated a pipeline to train and deploy models automatically and score credit card transactions in real-time (<10 ms).</li>
-                <li>Represented the company and fulfilled the responsibilities as a data provider in European Data Incubator (EDI), an EU H2020 project.</li>
+                <li>Represented the company and fulfilled the responsibilities as a data provider in European Data Incubator (EDI), a European Union H2020 project.</li>
               </ul>
               <hr>
             </div>
