- Replaced Keras with TensorFlow in Skills section.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons/icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: August 10, 2021</p>
+              <p class="w3-small w3-text-grey">Last updated: September 06, 2021</p>
             </div>
           </div>
         </div>
@@ -363,7 +363,7 @@
               <h5 class="w3-tag custom-color">Hive</h5>
               <h5 class="w3-tag custom-color">Spark</h5>
               <h5 class="w3-tag custom-color">Pandas</h5>
-              <h5 class="w3-tag custom-color">Keras</h5>
+              <h5 class="w3-tag custom-color">TensorFlow</h5>
               <br>
               <h5 class="w3-tag custom-color">CUDA</h5>
               <h5 class="w3-tag custom-color">OpenACC</h5>
