- Added a small item to my current position. - Re-added scikit-learn to the skills.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons/icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: September 06, 2021</p>
+              <p class="w3-small w3-text-grey">Last updated: September 22, 2021</p>
             </div>
           </div>
         </div>
@@ -90,6 +90,7 @@
                 <li>Working on fraud focused machine learning projects: cross-channel fraud detection and employee fraud detection. Due to difficulty of the problem, projects are mainly research-focused and enriched with academic collaborations from respectable universities. The projects also involve HPC and big data solutions because of their data size.</li>
                 <li>While studying, applying and developing state-of-the-art machine learning solutions in the research phase, implementing and integrating backend solutions in the release phase.</li>
                 <li>Developed a proof-of-concept computer vision project about tracking social distance in bank branches from camera footage.</li>
+                <li>Acting as employee representative in Occupational Health and Safety Board.</li>
               </ul>
               <hr>
             </div>
@@ -363,6 +364,7 @@
               <h5 class="w3-tag custom-color">Hive</h5>
               <h5 class="w3-tag custom-color">Spark</h5>
               <h5 class="w3-tag custom-color">Pandas</h5>
+              <h5 class="w3-tag custom-color">scikit-learn</h5>
               <h5 class="w3-tag custom-color">TensorFlow</h5>
               <br>
               <h5 class="w3-tag custom-color">CUDA</h5>
