- Added my new position and updated the related sections. - Moved the employee representative item to the activities.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
               <h1><b>Burak Bastem</b></h1>
             </div>
             <div class="w3-container w3-show-inline-block">
-              <p class="w3-left-align"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large custom-text-color"></i>Senior R&D Engineer<br><i class="fa fa-fw w3-margin-right"></i>at <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">Yapı Kredi Teknoloji</a></p>
-              <p class="w3-left-align"><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right custom-text-color"></i>burakbastem@hotmail.com</a></p>
-              <p>
+              <p class="w3-center"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large custom-text-color"></i>Senior Software Engineer<br><i class="fa fa-fw"></i>at <a href="https://blue.cloud/" target="_blank">Blue Cloud</a></p>
+              <p class="w3-center"><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right custom-text-color"></i>burakbastem@hotmail.com</a></p>
+              <p class="w3-center">
                 <a href="misc/Burak-Bastem-Resume.pdf" target="_blank" title="Resume in PDF"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://www.linkedin.com/in/burakbastem/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><img src="icons/icons8-google-scholar.svg" class="w3-margin-right" style="width:21px"></img></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: September 22, 2021</p>
+              <p class="w3-small w3-text-grey">Last updated: March 7, 2022</p>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-user fa-fw w3-margin-right"></i>Bio</h2>
             <div class="w3-container">
-              Burak Bastem is a software engineer specialized in high performance computing (HPC) and machine learning (ML). His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications. Since 2018, he has been working on fraud detection with ML, a challenging problem due to its highly unbalanced nature.
+              Burak Bastem is a software engineer specialized in machine learning (ML) and high performance computing (HPC). He studied, applied and developed state-of-the-art ML solutions and pipelines for fraud detection, a challenging problem due to its highly unbalanced nature. His experience in HPC involved developing GPU and CPU runtime libraries, optimizing multi-process communication and accelerating applications.
               <br>
               <br>
             </div>
@@ -83,14 +83,21 @@
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</h2>
             <div class="w3-container">
+              <h5 class="w3-show-inline-block"><b>Senior Software Engineer</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>February 2022 - present</h5>
+              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Blue Cloud</b>, remote, US</h6>
+              <ul style="list-style-type: square">
+              </ul>
+              <hr>
+            </div>
+            <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Senior R&D Engineer</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2020 - present</h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>August 2020 - February 2022</h5>
               <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Yapı Kredi Teknoloji - Applied Data Science Team</b>, İstanbul, Turkey</h6>
               <ul style="list-style-type: square">
-                <li>Working on fraud focused machine learning projects: cross-channel fraud detection and employee fraud detection. Due to difficulty of the problem, projects are mainly research-focused and enriched with academic collaborations from respectable universities. The projects also involve HPC and big data solutions because of their data size.</li>
-                <li>While studying, applying and developing state-of-the-art machine learning solutions in the research phase, implementing and integrating backend solutions in the release phase.</li>
+                <li>Worked on fraud focused machine learning projects: cross-channel fraud detection and employee fraud detection. Due to difficulty of the problem, projects were mainly research-focused and enriched with academic collaborations from respectable universities. The projects also involved HPC and big data solutions because of their data size.</li>
+                <li>While studied, applied and developed state-of-the-art machine learning solutions in the research phase, implemented and integrated pipelines (backend solutions) in the production phase.</li>
                 <li>Developed a proof-of-concept computer vision project about tracking social distance in bank branches from camera footage.</li>
-                <li>Acting as employee representative in Occupational Health and Safety Board.</li>
               </ul>
               <hr>
             </div>
@@ -101,7 +108,7 @@
               <ul style="list-style-type: square">
                 <li>Developed machine learning models for credit card fraud detection which involves providing solutions for extremely unbalanced class ratio and concept drift.</li>
                 <li>Achieved better performance than proprietary model.</li>
-                <li>Developed and integrated a pipeline to train and deploy models automatically and score credit card transactions in real-time (<10 ms).</li>
+                <li>Developed and integrated a pipeline to train models automatically and score credit card transactions in real-time (<10 ms).</li>
                 <li>Represented the company and fulfilled the responsibilities as a data provider in European Data Incubator (EDI), a European Union H2020 project.</li>
               </ul>
               <hr>
@@ -263,6 +270,14 @@
           <a id="activities"></a>
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
             <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-certificate fa-fw w3-margin-right"></i>Activities</h2>
+            <div class="w3-container">
+              <h5 class="w3-show-inline-block"><b>Employee Representative, Occupational Health and Safety Board, Yapı Kredi Teknoloji</b></h5>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>2020 - 2022</h5>
+              <!-- <ul style="list-style-type: square">
+                <li>Talked about <a href="#experience">fraud projects</a>.</li>
+              </ul> -->
+              <hr>
+            </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Speaker, TRAI Meet-Up #45</b></h5>
               <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>May 2021</h5>
