- Added icons for universities in education section. - Migrated from UA to GA4. - Replaced the photo with the smaller one.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css" >
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZNKKQ5GWS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JZNKKQ5GWS');
+  </script>
+
   <style>
     html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   </style>
@@ -26,7 +36,7 @@
         <div class="w3-third w3-center custom-position-2 w3-margin-bottom">
           <div class="w3-white w3-text-dark-grey w3-card-4">
             <div class="">
-              <img src="photos/burak-bastem-photo.jpg" class="custom-image w3-circle w3-margin-top" alt="Burak Bastem">
+              <img src="photos/burak-bastem.jpg" class="custom-image w3-circle w3-margin-top" alt="Burak Bastem">
               <h1><b>Burak Bastem</b></h1>
             </div>
             <div class="w3-container w3-show-inline-block">
@@ -38,7 +48,7 @@
                 <a href="https://scholar.google.com/citations?user=b5V6mWIAAAAJ&hl=en" target="_blank" title="Google Scholar Profile"><i class="fab fa-google-scholar fa-fw w3-margin-right w3-large custom-text-color"></i></a>
                 <a href="https://github.com/burakbastem/" target="_blank" title="GitHub Profile"><i class="fab fa-github fa-fw w3-margin-right w3-large custom-text-color"></i></a>
               </p>
-              <p class="w3-small w3-text-grey">Last updated: December 3, 2023</p>
+              <p class="w3-small w3-text-grey">Last updated: February 4, 2024</p>
             </div>
           </div>
         </div>
@@ -211,11 +221,12 @@
           <!-- Education -->
           <a id="education"></a>
           <div class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
-            <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-university fa-fw w3-margin-right"></i>Education</h2>
+            <h2 class="w3-padding-16 custom-text-color"><i class="fa fa-graduation-cap fa-fw w3-margin-right"></i>Education</h2>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Master of Science, Computer Science and Engineering</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - Apr 2019</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkiye</h6>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2016 - Apr 2019</h6>
+              <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
               <p>
                 Thesis: Tiling-Based Programming Model for GPU Clusters Targeting Structured Grids
                 <br>
@@ -225,29 +236,33 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Bachelor of Science, Computer Engineering</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2012 - Feb 2016</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkiye</h6>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2012 - Feb 2016</h6>
+              <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
               <p>GPA: 3.18 / 4.00</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Bachelor of Science, Industrial Engineering</b> - Double Major</h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2015 - June 2016</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkiye</h6>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2015 - June 2016</h6>
+              <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
               <p>GPA: 3.18 / 4.00</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>Track Certificate Program, Software Engineering</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2014 - Feb 2016</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkiye</h6>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Feb 2014 - Feb 2016</h6>
+              <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>
               <p>GPA: 3.54 / 4.00</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-show-inline-block"><b>English Language Program</b></h5>
-              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2010 - Jan 2012</h5>
-              <h6><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i><b>Koç University</b>, İstanbul, Turkiye</h6>
+              <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right custom-text-color"></i>Sept 2010 - Jan 2012</h6>
+              <h6><i class="fas fa-university w3-margin-right custom-text-color"></i>Koç University</h6>
+              <h7 class="w3-show-block"><i class="fas fa-map-marker-alt w3-margin-right custom-text-color"></i>İstanbul, Turkiye</h7>              
               <br>
             </div>
           </div>
@@ -472,7 +487,7 @@
     </div>
     <!-- End Page Container -->
     <footer class="w3-container w3-margin w3-center w3-small w3-text-grey">
-      <b>&copy; 2017 - 2023 Burak Bastem</b>
+      <b>&copy; 2017 - 2024 Burak Bastem</b>
       <br>
       <b>CSS Framework: </b> Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
       <b>Font: </b> &copy; 2011 Google Inc.
@@ -531,15 +546,6 @@
           }
         });
       });
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579126-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-109579126-1');
     </script>
 
   </body>
